# Generated by Django 5.2.9 on 2026-01-20 17:41

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('nbms_app', '0017_framework_frameworkindicator_frameworktarget_and_more'),
    ]

    operations = [
        migrations.AddField(
            model_name='frameworkindicator',
            name='indicator_type',
            field=models.CharField(choices=[('headline', 'Headline'), ('binary', 'Binary'), ('component', 'Component'), ('complementary', 'Complementary'), ('other', 'Other')], default='other', max_length=20),
        ),
        migrations.CreateModel(
            name='BinaryIndicatorQuestion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, unique=True)),
                ('group_key', models.CharField(max_length=100)),
                ('question_key', models.CharField(max_length=100)),
                ('section', models.CharField(blank=True, max_length=100)),
                ('number', models.CharField(blank=True, max_length=50)),
                ('question_type', models.CharField(choices=[('option', 'Option'), ('checkbox', 'Checkbox'), ('header', 'Header')], default='option', max_length=20)),
                ('question_text', models.TextField(blank=True)),
                ('help_text', models.TextField(blank=True)),
                ('multiple', models.BooleanField(default=False)),
                ('mandatory', models.BooleanField(default=False)),
                ('options', models.JSONField(blank=True, default=list)),
                ('sort_order', models.PositiveIntegerField(default=0)),
                ('framework_indicator', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='binary_questions', to='nbms_app.frameworkindicator')),
            ],
        ),
        migrations.CreateModel(
            name='BinaryIndicatorResponse',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, unique=True)),
                ('response', models.JSONField(blank=True, default=list)),
                ('comments', models.TextField(blank=True)),
                ('question', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='responses', to='nbms_app.binaryindicatorquestion')),
                ('reporting_instance', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='binary_indicator_responses', to='nbms_app.reportinginstance')),
            ],
        ),
        migrations.CreateModel(
            name='IndicatorDataSeries',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, unique=True)),
                ('title', models.CharField(blank=True, max_length=255)),
                ('unit', models.CharField(blank=True, max_length=100)),
                ('value_type', models.CharField(choices=[('numeric', 'Numeric'), ('percent', 'Percent'), ('index', 'Index'), ('text', 'Text')], default='numeric', max_length=20)),
                ('methodology', models.TextField(blank=True)),
                ('disaggregation_schema', models.JSONField(blank=True, default=dict)),
                ('source_notes', models.TextField(blank=True)),
                ('status', models.CharField(choices=[('draft', 'Draft'), ('pending_review', 'Pending review'), ('approved', 'Approved'), ('published', 'Published'), ('archived', 'Archived')], default='draft', max_length=20)),
                ('sensitivity', models.CharField(choices=[('public', 'Public'), ('internal', 'Internal'), ('restricted', 'Restricted'), ('iplc_sensitive', 'IPLC-sensitive')], default='internal', max_length=20)),
                ('export_approved', models.BooleanField(default=False)),
                ('review_note', models.TextField(blank=True)),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='created_indicator_data_series', to=settings.AUTH_USER_MODEL)),
                ('framework_indicator', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='data_series', to='nbms_app.frameworkindicator')),
                ('indicator', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='data_series', to='nbms_app.indicator')),
                ('organisation', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='indicator_data_series', to='nbms_app.organisation')),
            ],
        ),
        migrations.CreateModel(
            name='IndicatorDataPoint',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, unique=True)),
                ('year', models.PositiveIntegerField()),
                ('value_numeric', models.DecimalField(blank=True, decimal_places=6, max_digits=20, null=True)),
                ('value_text', models.TextField(blank=True, null=True)),
                ('uncertainty', models.TextField(blank=True)),
                ('disaggregation', models.JSONField(blank=True, default=dict)),
                ('source_url', models.URLField(blank=True)),
                ('footnote', models.TextField(blank=True)),
                ('dataset_release', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='indicator_data_points', to='nbms_app.datasetrelease')),
                ('series', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='data_points', to='nbms_app.indicatordataseries')),
            ],
        ),
        migrations.AddIndex(
            model_name='binaryindicatorquestion',
            index=models.Index(fields=['framework_indicator'], name='nbms_app_bi_framewo_f55639_idx'),
        ),
        migrations.AddIndex(
            model_name='binaryindicatorquestion',
            index=models.Index(fields=['group_key'], name='nbms_app_bi_group_k_cdd343_idx'),
        ),
        migrations.AddConstraint(
            model_name='binaryindicatorquestion',
            constraint=models.UniqueConstraint(fields=('framework_indicator', 'group_key', 'question_key'), name='uq_binary_indicator_question'),
        ),
        migrations.AddConstraint(
            model_name='binaryindicatorresponse',
            constraint=models.UniqueConstraint(fields=('reporting_instance', 'question'), name='uq_binary_indicator_response'),
        ),
        migrations.AddIndex(
            model_name='indicatordataseries',
            index=models.Index(fields=['status'], name='nbms_app_in_status_208451_idx'),
        ),
        migrations.AddIndex(
            model_name='indicatordataseries',
            index=models.Index(fields=['sensitivity'], name='nbms_app_in_sensiti_e2be42_idx'),
        ),
        migrations.AddIndex(
            model_name='indicatordataseries',
            index=models.Index(fields=['organisation'], name='nbms_app_in_organis_155d5d_idx'),
        ),
        migrations.AddIndex(
            model_name='indicatordataseries',
            index=models.Index(fields=['created_by'], name='nbms_app_in_created_bbd467_idx'),
        ),
        migrations.AddConstraint(
            model_name='indicatordataseries',
            constraint=models.CheckConstraint(condition=models.Q(models.Q(('framework_indicator__isnull', False), ('indicator__isnull', True)), models.Q(('framework_indicator__isnull', True), ('indicator__isnull', False)), _connector='OR'), name='ck_indicator_data_series_single_identity'),
        ),
        migrations.AddConstraint(
            model_name='indicatordataseries',
            constraint=models.UniqueConstraint(condition=models.Q(('framework_indicator__isnull', False)), fields=('framework_indicator',), name='uq_indicator_data_series_framework_indicator'),
        ),
        migrations.AddConstraint(
            model_name='indicatordataseries',
            constraint=models.UniqueConstraint(condition=models.Q(('indicator__isnull', False)), fields=('indicator',), name='uq_indicator_data_series_indicator'),
        ),
        migrations.AddConstraint(
            model_name='indicatordatapoint',
            constraint=models.CheckConstraint(condition=models.Q(('value_numeric__isnull', False), ('value_text__isnull', False), _connector='OR'), name='ck_indicator_data_point_value_present'),
        ),
    ]
